Bug 561234 - Temporary fix to Fennec reversing upper and lower case r=dougt a=dholbert